<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="Accept">Accept</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="action_label">Add Label</string>
    <string name="action_play">Play Video</string>
    <string name="action_record">Record Video</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">share</string>
    <string name="action_show_my_location">Show My Location</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="alert_dialog_coupon_expiration">Make sure you use this coupon when you are ready to pay for your parking. Once you use the coupon, it will automatically be removed from your device after 30 min.</string>
    <string name="alert_dialog_coupon_expiration_title">Use Coupon Expiration</string>
    <string name="alert_dialog_leaving_app_title">Take me there</string>
    <string name="alert_dialog_text_n_go">Text N Go is a free service, although you may incur SMS texting fees based on your cell phone plan subscription.</string>
    <string name="alert_driving_warning">Driving while using a cellphone GPS System can be dangerous. Please Keep your attention and eyes on the road.</string>
    <string name="alert_general_leaving_app">You will be taken to SP+ website.</string>
    <string name="alert_leaving_app_central_parking">"You will be taken to Central's Monthly Parking Management website to login and manage your monthly parking."</string>
    <string name="alert_leaving_app_standard_parking">"You will be taken to Standard's Monthly Parking Management website to login and manage your monthly parking."</string>
    <string name="alert_leaving_app_to_map">"You will now leave the SP+ app and be taken to your device's default navigation app."</string>
    <string name="american">American Express</string>
    <string name="app_name">GoJovenAPP</string>
    <string name="attraction_address">Address</string>
    <string name="attraction_map_message_1">Showing location within 1 mile</string>
    <string name="attraction_map_message_2">Switch to map view to see all locations</string>
    <string name="attraction_title">Nearby Parking</string>
    <string name="change_password_enter_current_pwd">Enter your current password</string>
    <string name="change_password_enter_new_pwd">Enter your new password</string>
    <string name="change_password_retype_pwd">Retype your password</string>
    <string name="confirm_dialog_title">Please Confirm</string>
    <string name="contact_choose_a_department">Choose a Department</string>
    <string name="contact_choose_an_issue">Choose an issue</string>
    <string name="contact_form_error_title">Error</string>
    <string name="contact_form_success_message">Your message has been successfully submitted. You will receive a confirmation email shortly.</string>
    <string name="contact_form_success_title">Thank you</string>
    <string name="contact_submit">Submit</string>
    <string name="coupon">Coupon</string>
    <string name="coupon_detail_activate_coupon">Activate Coupon</string>
    <string name="coupon_detail_confirm_delete">Are you sure you want to permanently delete this coupon from your device?</string>
    <string name="coupon_detail_delete_coupon">Delete Coupon</string>
    <string name="coupon_detail_expiration">Expiration</string>
    <string name="coupon_detail_instructions">Instructions</string>
    <string name="coupon_detail_instructions_text">Show this screen to the cashier to redeem coupon. Must pay with credit/debit card to receive discount.</string>
    <string name="coupon_detail_report_issue">Report Issue</string>
    <string name="coupon_details">Coupon Details</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="dialog_dont_show_message">"Don't show this message again"</string>
    <string name="dialog_share_hint_message">Enter your message</string>
    <string name="dialog_signin_required_message">You must be signed in to access this feature. Press continue to Sign in or Register</string>
    <string name="dialog_signin_required_title">Sign in or Register</string>
    <string name="dialog_unable_to_get_position">"We couldn't find your position, do you want to enable GPS?"</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">Password and Password must be 5 chars at least and must match.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_last_name">Last Name must have between 2 and 30 characters.</string>
    <string name="login_fragment_dont_have_sp_account_yet">"Don't have an SP+ account yet?"</string>
    <string name="login_fragment_forgot_pwd">Forgot your password?</string>
    <string name="login_fragment_forgot_pwd_link">Click here</string>
    <string name="login_fragment_signin_title">Sign in using your email and password.</string>
    <string name="lot_detail_additional_information">Additional Information</string>
    <string name="lot_detail_hours_operation">Hours of Operation</string>
    <string name="lot_detail_indoors_outdoors">Indoors/Outdoors</string>
    <string name="lot_detail_mobile_coupons_accepted">Mobile Coupons Accepted</string>
    <string name="lot_detail_motorcycle_parking">Motorcycle Parking</string>
    <string name="lot_detail_oversized_parking">Oversized Parking</string>
    <string name="lot_detail_payment_options">Payment Options</string>
    <string name="lot_detail_reservations_accepted">Reservations Accepted</string>
    <string name="lot_detail_valet_parking">Valet Parking</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="texngo_contact_number">Contact Number</string>
    <string name="textngo_button_get_at">Schedule it</string>
    <string name="textngo_button_get_now">Get Now</string>
    <string name="textngo_car_color">Car Color</string>
    <string name="textngo_car_type">Car Type</string>
    <string name="textngo_info">An SMS/Text Message will be sent from your device to this location, so your car will be ready at a specific time or as soon as possible.</string>
    <string name="textngo_license_plate">License Plate</string>
    <string name="whereiparked_at_my_location">At my location</string>
    <string name="whereiparked_cancel">Cancel</string>
    <string name="whereiparked_delete_location">Delete</string>
    <string name="whereiparked_dialog_message">To save your current location please select an option.</string>
    <string name="whereiparked_dialog_title">Where I Parked</string>
    <string name="whereiparked_location_notes">Location Notes</string>
    <string name="whereiparked_point_on_map">Point on Map</string>
    <string name="whereiparked_save_location">Save Location</string>
    <string name="whereiparked_tap_to_comment">Tap to comment</string>
</resources>