<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/abc_action_bar_title_text_size" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip" android:text="@string/textngo_info" />
            <EditText android:id="@id/car_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/textngo_car_type" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
            <EditText android:id="@id/car_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/textngo_car_color" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
            <EditText android:id="@id/license_plate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/textngo_license_plate" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
            <EditText android:id="@id/contact_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/texngo_contact_number" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="number" />
            <EditText android:id="@id/valet_ticket" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="Valet Ticket" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
            <EditText android:id="@id/parking_spot" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="Parking Spot" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
            <Button android:textColor="#ffffffff" android:id="@id/get_now" android:background="@drawable/red_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/textngo_button_get_now" />
            <Button android:textColor="#ffffffff" android:id="@id/get_at" android:background="@drawable/red_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/textngo_button_get_at" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>