<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/abc_action_bar_title_text_size" android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/whereiparked_dialog_title" />
        <TextView android:textSize="@dimen/abc_action_bar_title_text_size" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/whereiparked_dialog_message" />
        <TextView android:textSize="@dimen/abc_action_bar_title_text_size" android:gravity="center_horizontal" android:layout_gravity="right" android:id="@id/at_my_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/whereiparked_at_my_location" android:textAllCaps="true" />
        <TextView android:textSize="@dimen/abc_action_bar_title_text_size" android:gravity="center_horizontal" android:layout_gravity="right" android:id="@id/point_on_map" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/whereiparked_point_on_map" android:textAllCaps="true" />
        <TextView android:textSize="@dimen/abc_action_bar_title_text_size" android:textColor="@color/gray_title" android:gravity="center_horizontal" android:layout_gravity="right" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/whereiparked_cancel" android:textAllCaps="true" />
    </LinearLayout>
</FrameLayout>