<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:id="@id/car_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/textngo_car_type" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
        <EditText android:id="@id/car_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/textngo_car_color" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
        <EditText android:id="@id/license_plate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/textngo_license_plate" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="text" />
        <EditText android:id="@id/contact_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:hint="@string/texngo_contact_number" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="number" android:imeOptions="actionDone" />
        <Button android:textColor="#ffffffff" android:id="@id/submit_button" android:background="@drawable/red_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Save" />
    </LinearLayout>
    <include android:id="@id/progressBar" layout="@layout/progressbar" />
</FrameLayout>