<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:id="@id/current_password" android:layout_width="fill_parent" android:layout_height="60.0dip" android:hint="@string/change_password_enter_current_pwd" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="textPassword" />
        <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="60.0dip" android:hint="@string/change_password_enter_new_pwd" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="textPassword" />
        <EditText android:id="@id/password1" android:layout_width="fill_parent" android:layout_height="60.0dip" android:hint="@string/change_password_retype_pwd" android:maxLines="1" android:singleLine="true" android:maxLength="50" android:inputType="textPassword" android:imeOptions="actionDone" />
        <Button android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/email_sign_in_button" android:background="@drawable/red_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="Submit" />
    </LinearLayout>
    <include android:id="@id/progressBar" layout="@layout/progressbar" />
</FrameLayout>