<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/map_container" android:layout_width="fill_parent" android:layout_height="260.0dip">
                <RelativeLayout android:id="@id/map" android:layout_width="fill_parent" android:layout_height="200.0dip" />
                <ImageView android:id="@id/lot_direction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="150.0dip" android:src="@drawable/attraction_direction_selector" android:layout_alignParentRight="true" />
                <FrameLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </RelativeLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/whereiparked_location_notes" />
                <EditText android:id="@id/notes" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginBottom="10.0dip" android:hint="@string/whereiparked_tap_to_comment" android:ems="10" android:inputType="textMultiLine" android:imeOptions="actionDone" />
                <Button android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/save" android:background="@drawable/red_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/whereiparked_save_location" />
                <Button android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@id/delete" android:background="@drawable/black_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/whereiparked_delete_location" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include android:id="@id/progressBar" layout="@layout/progressbar" />
</FrameLayout>