<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="#ff000000" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/lot_detail_additional_information" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/hours_operation_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/title_hours_operation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_hours_operation" android:layout_weight="1.0" />
        <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/key_24h" />
    </LinearLayout>
    <TextView android:textSize="18.0dip" android:textColor="#ff000000" android:id="@id/hours_operation" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="20.0dip" android:text="24hs" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/indoors_outdoors_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/title_indoors_outdoors" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_indoors_outdoors" android:layout_weight="1.0" />
        <ImageView android:id="@id/indoors_outdoors_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/key_indoor" />
    </LinearLayout>
    <TextView android:textSize="18.0dip" android:textColor="#ff000000" android:id="@id/indoors_outdoors" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="20.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/payment_options_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/title_payment_options" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_payment_options" android:layout_weight="1.0" />
        <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/payment" />
    </LinearLayout>
    <TextView android:textSize="18.0dip" android:textColor="#ff000000" android:id="@id/payment_options" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginBottom="20.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/reservation_accepted_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/reservation_accepted" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_reservations_accepted" android:layout_weight="1.0" />
        <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/key_reserve" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/coupon_accepted_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/coupons_accepted" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_mobile_coupons_accepted" android:layout_weight="1.0" />
        <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/key_mobile_coupons" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/motorcycle_parking_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/motorcycle_parking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_motorcycle_parking" android:layout_weight="1.0" />
        <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/key_motorcycle" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/oversize_parking_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/oversize_parking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_oversized_parking" android:layout_weight="1.0" />
        <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/key_over_size" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/valet_parking_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/valet_parking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lot_detail_valet_parking" android:layout_weight="1.0" />
        <ImageView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/key_valet_parking" />
    </LinearLayout>
</LinearLayout>